# pytils

./: .gitignore  README.md  mypy.ini  notes.txt  requirements.txt  setup.cfg
doc/: installation.md  openai-api.md
notes/: pdf-content.txt
sql/: product_purchases.sql
src/tests/: test_data.py  test_files.py  test_utils.py
src/utils/: data.py  files.py  gpt.py  graph.py  mail.py  nlp.py  pdf.py  queries.py  scraper.py  storage.py  utils.py  web.py
