[metadata]
name = pytils
version = 0.01
author = "Pierre de Lacaze"
description = "Pytils utility functions"
long_description = file: README.md
long_description_content_type = text/markdown
url = https://https://github.com/delaray/pytils.git@develop
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
     = src
include_package_data=True
packages = find:
python_requires = >=3.8
install_requires =
    json-logging
    json_log_formatter
    datadog_api_client


[options.packages.find]
where = src
